--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="img pi5">
                         <p class="portfolio-desc">
                             Results-oriented, responsive website made with Sass.</p>
-                        <button class="btn"><a href=""></a>View Website &#x0003E;</button>
+                        <button class="btn"><a href="https://abhithakur75.github.io/Designer-sass/">View Website</a> &#x0003E;</button>
                     </div>
                 </div>
                 <div class="portfolio">
@@ -160,28 +160,7 @@
                             &#x0003E;</button>
                     </div>
                 </div>
-                <div class="portfolio">
-                    <div class="img pi10">
-                        <p class="portfolio-desc">
-                            Results-oriented, responsive The Movie database service website using TMDB API
-                            in ReactJs.</p>
-                        <button class="btn"><a href="">View Website</a> &#x0003E;</button>
-                    </div>
-                </div>
-                <div class="portfolio">
-                    <div class="img pi11">
-                        <p class="portfolio-desc">
-                            Results-oriented, responsive web-layout design in ReactJs</p>
-                        <button class="btn"><a href="">View Website</a> &#x0003E;</button>
-                    </div>
-                </div>
-                <div class="portfolio">
-                    <div class="img pi12">
-                        <p class="portfolio-desc">
-                            Results-oriented, responsive E-commerce website using ReactJs</p>
-                        <button class="btn"><a href="">View Website</a> &#x0003E;</button>
-                    </div>
-                </div>
+               
             </div>
         </section>
 
