--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                 </div>
                 <div class="service">
                     <i class="fas fa-layer-group"></i>
-                    <h1>Full-Stack</h1>
-                    <p>Full-Stack developer anykind of front-end and back-end work</p>
+                    <h1>front-end</h1>
+                    <p>front-end developer, anykind of front-end  work</p>
                 </div>
             </div>
         </section>
