--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hospital Website">
+    <link rel="shortcut icon" href="/img/user.webp" type="image/x-icon">
     <title> Amazing Portfolio website || Web Addicted </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
