--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="img pi1">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive hospital service website.</p>
-                            <button class="btn"><a href="https://medical-hospital75.netlify.app/">View Website</a>
+                            <button class="btn"><a href="https://medical-hospital75.netlify.app/" aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                         <div class="img pi2">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive <br> E-scooter service website.</p>
-                            <button class="btn"><a href=""></a>View Website</a> &#x0003E;</button>
+                            <button class="btn"><a href=""  aria-label="View Website"></a>View Website</a> &#x0003E;</button>
                         </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                         <div class="img pi3">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive openweather service website made with using api.</p>
-                            <button class="btn"> <a href="https://weatherapi75.netlify.app/">View Website</a>
+                            <button class="btn"> <a href="https://weatherapi75.netlify.app/"  aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                         <div class="img pi4">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive food recipie website made with using api.</p>
-                            <button class="btn"> <a href="https://foodrecipie75.netlify.app/">View Website</a>
+                            <button class="btn"> <a href="https://foodrecipie75.netlify.app/"  aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                         <div class="img pi5">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive website made with Sass.</p>
-                            <button class="btn"><a href="https://abhithakur75.github.io/Designer-sass/">View Website</a>
+                            <button class="btn"><a href="https://abhithakur75.github.io/Designer-sass/"  aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         <div class="img pi6">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive website made with bootstrap.</p>
-                            <button class="btn"><a href="https://creative75.netlify.app/">View Website</a>
+                            <button class="btn"><a href="https://creative75.netlify.app/"  aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <div class="img pi7">
                             <p class="portfolio-desc">
                                 Results-oriented, calculator service website using Javascript.</p>
-                            <button class="btn"><a href="https://calculator7535.netlify.app/">View Website</a>
+                            <button class="btn"><a href="https://calculator7535.netlify.app/"  aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="img pi8">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive calendar service website.</p>
-                            <button class="btn"><a href="https://calender75.netlify.app/">View Website</a>
+                            <button class="btn"><a href="https://calender75.netlify.app/"  aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                         <div class="img pi9">
                             <p class="portfolio-desc">
                                 Results-oriented, responsive stopwatch service website.</p>
-                            <button class="btn"><a href="https://stopwatch75.netlify.app/">View Website</a>
+                            <button class="btn"><a href="https://stopwatch75.netlify.app/"  aria-label="View Website">View Website</a>
                                 &#x0003E;</button>
                         </div>
                     </div>
